Smarter CSS to fix Mobile alignment

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -346,9 +346,9 @@ textarea.form-control {
         &.active {
             background-color: #cdf8f4;
         }
-        // Removes margin to line up tags list with uptime percentage
-        .tags, .tag-wrapper:first-child {
-            margin-left: 0 !important;
+        .tags {
+            // Removes margin to line up tags list with uptime percentage
+            margin-left: -0.25rem;
         }
     }
 }
